[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# We need the core engine. 
# "guest" feature might be needed depending on build targets, 
# but start with default or minimal features.
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle" }
log = "0.4"