[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# We use the core Ruffle engine
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", default-features = false, features = ["avm1"] }
# "log" allows Ruffle to print messages. We will catch them.
log = "0.4"